<resources>
    <string name="app_name">Mp3 Player</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Group 8</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="profile">Profile</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="logout">Log out</string>
    <string name="menu_send">Send</string>
</resources>
